# logcraft-cli

./: .dockerignore  .gitignore  .gitmodules  .licenserc.yaml  .prototools  Cargo.toml  Dockerfile  LICENSE  README.md  licenserc.toml
.github/workflows/: checks.yml  docker-publish.yml  license-enforcement.yml  release-docs.yml  release-image.yml  release-lgc.yml  release-plugins.yml  tag-tests.yml  validate.yml
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: rust.yml  tag-plugin.yml
apps/lgc/: Cargo.toml  moon.yml
apps/lgc/src/: commands.rs  lgc.rs  lib.rs
apps/lgc/src/commands/: apply.rs  destroy.rs  init.rs  ping.rs  plan.rs  services.rs  validate.rs
apps/lgc/tests/: common.rs  test_init.rs  test_services.rs  test_validate.rs
crates/common/: Cargo.toml
crates/common/src/: configuration.rs  detections.rs  lib.rs  parser.rs  state.rs  utils.rs
crates/common/src/plugins/: manager.rs  mod.rs
crates/common/src/state/: mod.rs
crates/common/src/state/backends/: http.rs  local.rs  mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: engine.rs  lib.rs  state.rs
docs/: moon.yml  package.json  pnpm-lock.yaml
docs/src/: index.md  support.md
docs/src/.vitepress/: config.mts
docs/src/.vitepress/theme/: index.ts
docs/src/.vitepress/theme/components/plugins/: PluginStatus.vue  PluginsIndexPage.vue  common.js  plugins.data.js
docs/src/commands/: apply.md  destroy.md  init.md  ping.md  plan.md  services.md  validate.md
docs/src/concepts/: detections.md  identifiers.md  plugins.md  policies.md
docs/src/developers/: compiling.md  docker-images.md  how-to-create-plugins.md  state.md
docs/src/essentials/: configuration.md  gitlab.md  installation.md  quickstart.md
docs/src/plugins/: crowdstrike.md  elastic.md  google-chronicle.md  index.md  limacharlie.md  microsoft-sentinel.md  paloalto-cortex.md  sekoia.md  sigma.md  splunk.md  tanium.md  yara.md
docs/vale/: .vale.ini
docs/vale/styles/config/vocabularies/LogCraft/: accept.txt
libs/bindings/: plugin.wit  world.wit
libs/lgc-common/: Cargo.toml  moon.yml
libs/lgc-common/src/: configuration.rs  detections.rs  diff.rs  lib.rs  utils.rs
libs/lgc-common/src/plugins/: manager.rs  mod.rs
libs/lgc-common/src/state/: mod.rs
libs/lgc-common/src/state/backends/: http.rs  local.rs  mod.rs
libs/lgc-policies/: Cargo.toml  moon.yml
libs/lgc-policies/src/: helpers.rs  lib.rs  policy.rs  schema.rs
libs/lgc-policies/tests/: policy_tests.rs
libs/lgc-runtime/: Cargo.toml  moon.yml
libs/lgc-runtime/src/: engine.rs  lib.rs  state.rs
plugins/sample/: Cargo.toml  moon.yml
plugins/sample/src/: backend.rs  lib.rs  schema.rs
plugins/sentinel/: Cargo.toml  README.md  moon.yml
plugins/sentinel/src/: helpers.rs  lib.rs
plugins/sentinel/src/schemas/: mod.rs  rule.rs  settings.rs  types.rs
plugins/splunk/: Cargo.toml  README.md  moon.yml
plugins/splunk/src/: lib.rs
plugins/splunk/src/schemas/: rule.rs  settings.rs  types.rs
scripts/: package-plugins.sh  package.sh
src/: commands.rs  lib.rs
src/commands/: deploy.rs  destroy.rs  diff.rs  environments.rs  init.rs  plugins.rs  services.rs  validate.rs
wit/: plugin.wit  world.wit
