[package]
name = "lgc"
version     = { workspace = true }
authors     = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }

[workspace.package]
version = "0.1.3"
authors = ["LogCraft <dev@logcraft.io>"]
edition = "2021"
license = "MPL-2.0"
homepage = "https://www.logcraft.io"
repository = "https://github.com/LogCraftIO/logcraft-cli"
rust-version = "1.82"
readme = "README.md"
description = """
Easily build Detection-as-Code pipelines for modern security tools (SIEM, EDR, XDR, ...)
"""
categories = ["command-line-utilities", "config"]
keywords = ["iac", "dac", "security", "detection", "siem", "edr", "xdr", "automation"]

[[bin]]
name = "lgc"
path = "src/bin/lgc.rs"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "debuginfo"

[profile.dev]
incremental = true
opt-level = 0
debug = 0
strip = "debuginfo"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[dependencies]
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
url.workspace = true
wasmtime.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
kclvm-api.workspace = true
dashmap.workspace = true
rayon.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
console.workspace = true
dialoguer.workspace = true

indicatif = "0.17"
clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10", features = ["yaml", "env"] }
envsubst = "0.2"

# Local dependencies
lgc-common = { path = "crates/common", version = "0.1.3" }
lgc-runtime = { path = "crates/runtime", version = "0.1.3" }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0"
serde = "1.0"
serde_yaml_ng = "0.10"
serde_json = "1.0"
url = "2.5"
tokio = "1.38"
tokio-util = "0.7"
reqwest = "0.12.4"
futures = "0.3"
http = "1.1"
inquire = "0.7"
console = "0.15"
dialoguer = "0.11"
rayon = "1.10.0"
dashmap = "6.1"
tracing = {version = "0.1", features = ["log"] }
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "std"] }

kclvm-api = { git = "https://github.com/kcl-lang/kcl", tag = "v0.10.8" }
kclvm-query = { git = "https://github.com/kcl-lang/kcl", tag = "v0.10.8" }
kclvm-sema = { git = "https://github.com/kcl-lang/kcl", tag = "v0.10.8" }

# Wasm related
wasmtime = "27.0"
wasmtime-wasi = "27.0"
wasmtime-wasi-http = "27.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Whether to enable GitHub Attestations
github-attestations = true
