[workspace.package]
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/LogCraftIO/logcraft-cli"

[workspace]
members = [ 
    "libs/*",
    "apps/*", 
    "plugins/*"
]
exclude = ["libs/bindings"]
resolver = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
# Local dependencies
lgc = { path = "apps/lgc" }
lgc-common = { path = "libs/lgc-common" }
lgc-runtime = { path = "libs/lgc-runtime" }

# Utils
anyhow = "1.0"
thiserror = "2.0"
console = "0.15"
dialoguer = "0.11"
tracing = {version = "0.1", features = ["log"] }
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "std"] }
once_cell = "1.20"

# Async
tokio = { version = "1.0", features = ["full"] }

# Ser / Deser
serde = { version = "1.0.211", features = ["derive"] }
serde_with_macros = "3.12"
serde_path_to_error = "0.1"
serde_json = "1.0"
serde_yaml_ng = "0.10"
toml = "0.8"

# WASM Related
wasmtime = "30.0"
wasmtime-wasi = "30.0"
wasmtime-wasi-http = "30.0"
wit-bindgen = "0.39"

# Configuration related
schemars = { version = "0.8" }
jsonschema = { version = "0.29", default-features = false }

# HTTP related
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
http = "1.2"
waki = "0.5"
url = "2.5"
