# Copyright (c) 2023 LogCraft, SAS.
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lgc-common"
description = "LogCraft common utilities"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml_ng.workspace = true
url.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
wasmtime.workspace = true
serde_json.workspace = true
inquire.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
kclvm-api.workspace = true
kclvm-query.workspace = true
kclvm-sema.workspace = true
rayon.workspace = true
dashmap.workspace = true
console.workspace = true
dialoguer.workspace = true

futures = "0.3"
async-trait = "0.1"
tempfile = "3.10"
uuid = "1.8"
similar = "2.5"
regex = "1.10"
serde_with = "3.8"

# Local dependencies
lgc-runtime = { path = "../runtime" }
