# Copyright (c) 2023 LogCraft, SAS.
# SPDX-License-Identifier: MPL-2.0

[package]
name = "logcraft-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
http.workspace = true
tracing.workspace = true

wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

crossbeam-channel = "0.5"
async-trait = "0.1"

wit-component = "0.210"
wit-parser = "0.210"
wasmparser = "0.210"

# Temp
hyper = { version = "1.0.1", features = ["full"] }
tokio-native-tls = "0.3.1"
http-body-util = "0.1.1"