[package]
name = "lgc-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Local dependencies
lgc-runtime.workspace = true
lgc-policies.workspace = true

# Utils
tracing.workspace = true
tracing-subscriber.workspace = true
dialoguer.workspace = true
uuid = { version = "1.13", features = ["serde", "v4"] }
similar = "2.7"
console.workspace = true
once_cell = "1.20"
regex = "1.10"
tempfile = "3.10"
fs4 = { version = "0.13", features = ["tokio"] }

# Async
tokio.workspace = true

# Ser / Deser
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true
serde_with = "3.8"
jsonschema.workspace = true
schemars.workspace = true

# HTTP related
reqwest.workspace = true
url.workspace = true

# WASM Related
wasmtime.workspace = true
