[package]
name = "sample"
description = "LogCraft CLI testing plugin"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Utils
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng = "0.10"
once_cell = "1.20"

# Schema related
schemars.workspace = true
jsonschema.workspace = true

# WASM Related
wit-bindgen.workspace = true
